# testarossa

./: .gitignore  Makefile  Vagrantfile  playbook.yml  testarossa.opam
lib/: allowed_ops.ml  cmd_types.ml  context.ml  context.mli  deployment.ml  jbuild  license.ml  rollback.ml  singleton.ml  singleton.mli  test_sr.ml  testarossa.ml  tsold.ml  tsold.mli
lib/_build/: log
roles/cluster/tasks/: main.yml
roles/common/tasks/: main.yml
scripts/: join_cluster.sh  setup_cluster_one.sh  setup_raw
scripts/raw/: corosync.j2
scripts/xs/: get_public_ip.sh  update.sh
src/: cmd_bonding.ml  cmd_init.ml  cmd_lwt.ml  jbuild  main.ml
test/: jbuild  main.ml
tests/: scenarios.ml  test_cluster  test_common.ml  test_quicktest
